unpackaged/main/default/objects/POSJ__c/POSJ__c.object-meta.xml
<CustomObject>
    <label>POS Solution.</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS Solutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>