unpackaged/main/default/objects/POSJ__c/fields/Comms_Type__c.field-meta.xml
<CustomField>
    <fullName>Comms_Type__c</fullName>
    <formula>TEXT(POS_Solution__r.Comms_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comms Type</label>
    <type>Text</type>
</CustomField>