unpackaged/main/default/objects/POSJ__c/fields/MID__c.field-meta.xml
<CustomField>
    <fullName>MID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MID</label>
    <referenceTo>MID__c</referenceTo>
    <relationshipName>POS_Solution</relationshipName>
    <type>Lookup</type>
</CustomField>