unpackaged/main/default/objects/POSJ__c/fields/POS_Name__c.field-meta.xml
<CustomField>
    <fullName>POS_Name__c</fullName>
    <formula>POS_Solution__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POS Name</label>
    <type>Text</type>
</CustomField>