unpackaged/main/default/objects/POSJ__c/fields/POS_Solution__c.field-meta.xml
<CustomField>
    <fullName>POS_Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POS Solution</label>
    <referenceTo>POS_Solution__c</referenceTo>
    <relationshipName>MIDs</relationshipName>
    <type>Lookup</type>
</CustomField>