unpackaged/main/default/objects/POSJ__c/fields/TID__c.field-meta.xml
<CustomField>
    <fullName>TID__c</fullName>
    <formula>POS_Solution__r.Terminal_ID_TID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TID</label>
    <type>Text</type>
</CustomField>