unpackaged/main/default/objects/POSJ__c/listViews/POS_2nd_Line_Support_POSJ.listView-meta.xml
<ListView>
    <fullName>POS_2nd_Line_Support_POSJ</fullName>
    <filterScope>Queue</filterScope>
    <label>POS 2nd Line Support GB</label>
    <queue>POS_2nd_Line_Support_GB</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>